--- a/en/j/jeudi.1517.wikitext
+++ b/en/j/jeudi.1517.wikitext
@@ -1,18 +1,18 @@
 ==French==
 
+===Etymology===
+From {{etyl|la|fr}} {{term|dies Iovis||day of Jupiter|lang=la}}.
+
 ===Pronunciation===
 * {{IPA|/ʒø.di/|lang=fr}}, {{SAMPA|/Z2.di/}}
 * {{audio|Fr-jeudi-fr-ouest.ogg|Audio (France)}}
 * {{rhymes|i|lang=fr}}
 * {{homophones|jeudis|lang=fr}}
 
-===Etymology===
-From {{etyl|la|fr}} {{term|dies Iovis||day of Jupiter|lang=la}}.
-
 ===Noun===
 {{fr-noun|m}}
 
-# [[Thursday]].
+# [[Thursday]] (day of the week).
 
 ====Derived terms====
 * [[la semaine des quatre jeudis]]
