--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -12,7 +12,7 @@
 ===Verb===
 {{en-verb}}
 
-# {{transitive}} To apply a [[force]] to (an object) such that it comes [[toward]] the person or thing applying the force.
+# {{transitive}} To apply a [[force]] to (an object) so that it comes [[toward]] the person or thing applying the force.
 # {{transitive}} {{context|slang}} To persuade (someone) to have sex with one<!-- or to be 'on the pull' (willing to have sex)-->.
 #: ''He's pulled that bird over there.''
 # {{transitive}} to [[remove]] (something), especially from public [[circulation]] or [[availability]]
