--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -39,6 +39,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * Hebrew: {{t|he|חתוך|tr=khatúkh}}
 * Portuguese: {{t-|pt|cortado|m}}
 * Swedish: [[klippt]], [[skuren]]
+* Vietnamese: {{t|vi|cắt}}
 {{trans-bottom}}
 
 {{trans-top|reduced}}
