--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -32,6 +32,7 @@ From {{etyl|fro}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}}), f
 {{trans-mid}}
 * Polish: {{t+|pl|budować}}, {{t+|pl|zbudować}}, {{t+|pl|tworzyć}}, {{t+|pl|stworzyć}}
 * Russian: {{t+|ru|основывать|tr=osnóvyvat'}} {{impf}}, {{t+|ru|основать|tr=osnovát'}} {{pf}}
+* Scots: {{t|sco|foond}}
 * Spanish: {{t-|es|fundar}}
 * Turkish: {{t|tr|temel atmak}}
 {{trans-bottom}}
@@ -46,6 +47,7 @@ From {{etyl|fro}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}}), f
 * Norwegian: {{t|no|grunnlegge}}
 * Polish: {{t+|pl|założyć}}, {{t+|pl|zakładać}}
 * Russian: {{t+|ru|основывать|tr=osnóvyvat'}} {{impf}}, {{t+|ru|основать|tr=osnovát'}} {{pf}}
+* Scots: {{t|sco|foond}}
 * Swedish: {{t|sv|grunda}}
 * Turkish: {{t+|tr|kurmak}}
 {{trans-bottom}}
