--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -70,6 +70,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|fenþanan}} (c
 * Portuguese: {{t+|pt|achar}}, {{t+|pt|encontrar}}
 * Romanian: {{t+|ro|găsi}}
 * Russian: {{t+|ru|находить|tr=naxodít’}} {{impf}}, {{t+|ru|найти|tr=najtí}} {{pf}}
+* [[Scots]]: {{t|sco|fin}}
 * [[Scottish Gaelic]]: {{t-|gd|faigh|xs=Scottish Gaelic}},  {{t-|gd|lorg|xs=Scottish Gaelic}},  {{t-|gd|amais|xs=Scottish Gaelic}}
 * Slovene: {{t+|sl|najti}}
 * Spanish: {{t+|es|encontrar}}, {{t+|es|hallar}}
