--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -29,10 +29,10 @@ From {{etyl|fro}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}}), f
 * Czech: {{t+|cs|založit}}
 * French: {{t+|fr|fonder}}
 * Norwegian: {{t|no|grunnlegge}}
-{{trans-mid}}
 * Polish: {{t+|pl|budować}}, {{t+|pl|zbudować}}, {{t+|pl|tworzyć}}, {{t+|pl|stworzyć}}
+{{trans-mid}}
 * Russian: {{t+|ru|основывать|tr=osnóvyvat'}} {{impf}}, {{t+|ru|основать|tr=osnovát'}} {{pf}}
-* Scots: {{t|sco|foond}}
+* [[Scots]]: {{t|sco|foond}}
 * Spanish: {{t-|es|fundar}}
 * Turkish: {{t|tr|temel atmak}}
 {{trans-bottom}}
@@ -43,11 +43,11 @@ From {{etyl|fro}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}}), f
 * Dutch: {{t+|nl|stichten}}
 * Finnish: {{t+|fi|perustaa}}
 * French: {{t+|fr|fonder}}
-{{trans-mid}}
 * Norwegian: {{t|no|grunnlegge}}
+{{trans-mid}}
 * Polish: {{t+|pl|założyć}}, {{t+|pl|zakładać}}
 * Russian: {{t+|ru|основывать|tr=osnóvyvat'}} {{impf}}, {{t+|ru|основать|tr=osnovát'}} {{pf}}
-* Scots: {{t|sco|foond}}
+* [[Scots]]: {{t|sco|foond}}
 * Swedish: {{t|sv|grunda}}
 * Turkish: {{t+|tr|kurmak}}
 {{trans-bottom}}
