--- a/en/垈/垈.13067.wikitext
+++ b/en/垈/垈.13067.wikitext
@@ -27,7 +27,7 @@
 ===Hanja===
 {{ko-hanja|hangeul=대|rv=dae|mr=tae}}
 
-# {{defn|Korean}}
+# {{defn|Korean}} lot (site of house,집터)
 
 [[Category:Ghost kanji]]
 
