t+jbo:[[melbi]] ([[WT:EDIT|Assisted]]) <beautiful#9343000>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -94,6 +94,7 @@
 * Kurdish: {{ku-Arab|[[جوان]]}}, {{ku-Arab|[[ئێسک سووک]]}}
 * Latin: {{t-|la|pulcher}}, {{t-|la|formosus|m}}, {{t+|la|bellus|m}}
 * [[Limburgish]]: {{t-|li|sjoen|xs=Limburgish}}
+* [[Lojban]]: {{t|jbo|melbi}}
 * [[Macedonian]]: {{t|mk|убав|m|tr=úbav}},  {{t|mk|убава|f|tr=úbava}},  {{t|mk|убаво|n|tr=úbavo}},  {{t-|mk|прекрасен|m|tr=prékrasen}},  {{t|mk|прекрасна|f|tr=prékrasna}},  {{t|mk|прекрасно|n|tr=prékrasno}}
 * Navajo: {{tø|nv|nizhóní}}
 * [[Novial]]: [[beli]]
