--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -107,6 +107,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * Korean: {{t+|ko|오다|tr=oda|sc=Hang}}
 * Kurdish: [[hatin]], {{ku-Arab|[[هاتن]]}}
 * Latin: {{t+|la|venio}}
+* [[Lojban]]: {{t|jbo|klama}}
 * Malay: {{t+|ms|datang|xs=Malay}}, {{t-|ms|mari|xs=Malay}}
 * [[Manchu]]: [[jimbi]]
 * Mongolian: {{t|mn|ирэх|tr=irekh|sc=Cyrl|xs=Mongolian}}
