--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -52,6 +52,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Latin: {{t-|la|ramus|alt=rāmus}}
 * Lithuanian: {{t+|lt|šaka|f|xs=Lithuanian}}
 * [[Macedonian]]: {{t|mk|гранка|n|tr=grànka}}
+* Navajo: {{tø|nv|tsin bigaan}}
 * Polish: {{t+|pl|gałąź|f}}
 * Portuguese: {{t+|pt|galho|m}}
 * Romanian: {{t+|ro|ram|n}}, {{t+|ro|ramură|f}}
