--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -232,6 +232,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 [[kk:branch]]
 [[sw:branch]]
 [[lt:branch]]
+[[li:branch]]
 [[hu:branch]]
 [[ml:branch]]
 [[nl:branch]]
