iwiki +[[:el:vomit]] <vomit#9350984>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -114,6 +114,7 @@ From {{etyl|la}} ''[[vomitare]]'', present active infinitive of {{term|vomito|vo
 
 [[Category:French verb forms]]
 
+[[el:vomit]]
 [[es:vomit]]
 [[fa:vomit]]
 [[fr:vomit]]
