/* Related terms */ oops <saffron#9352438>

--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -152,7 +152,7 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 * [[safranine]]
 {{rel-mid}}
 * [[safflower]]
-*{{rel-bottom}}
+{{rel-bottom}}
 
 ===See also===
 *{{pedia|Crocus sativus}}
