t+tl:[[Estados Unidos ng Amerika]] ([[WT:EDIT|Assisted]]) <United States of America#9358298>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -89,7 +89,7 @@
 * {{trreq|Sotho}}
 * Spanish: {{t+|es|Estados Unidos de América|m|s}}, (''short form'') {{t+|es|Estados Unidos|m|s}}, ''abbr:'' {{t-|es|EE. UU.|m|s}}, {{t-|es|EEUU}}
 * Swedish: {{t|sv|Amerikas förenade stater}}, {{t|sv|Förenta staterna}}
-* {{trreq|Tagalog}}
+* [[Tagalog]]: {{t|tl|Estados Unidos ng Amerika}}
 * [[Tajik]]: [[Иёлоти Муттаҳидаи Амриқо]] (Iyoloti Muttaħidai Amriqo)
 * {{trreq|Tamil}}
 * {{trreq|Telugu}}
