--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -220,6 +220,7 @@ From {{etyl|fro}} {{term|comte|lang=fro}}, {{term|conte|lang=fro}}.
 [[zh-min-nan:count]]
 [[de:count]]
 [[et:count]]
+[[el:count]]
 [[es:count]]
 [[fa:count]]
 [[fr:count]]
