iwiki +[[:my:cut]] <cut#9400100>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -514,6 +514,7 @@ From {{proto|North Sarawak|likud|lang=kyi}} from {{proto|Malayo-Polynesian|likuj
 [[li:cut]]
 [[hu:cut]]
 [[ml:cut]]
+[[my:cut]]
 [[nl:cut]]
 [[ja:cut]]
 [[pl:cut]]
