iwiki +[[:my:curve]] <curve#9404920>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -282,6 +282,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 [[li:curve]]
 [[hu:curve]]
 [[ml:curve]]
+[[my:curve]]
 [[nl:curve]]
 [[no:curve]]
 [[pl:curve]]
