--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -107,6 +107,7 @@
 * German: {{t+|de|Schauspiel|n}}
 * Hebrew: {{t+|he|משחק|m|tr=misḥāq}}
 * Hungarian: {{t+|hu|színdarab}}, {{t+|hu|darab}}
+* Indonesian: {{t|id|pentas}}
 * Italian: {{t+|it|dramma|m}}
 {{trans-mid}}
 * Japanese: [[演劇]] (えんげき, engeki)
