t+id:[[pentas]] ([[WT:EDIT|Assisted]]) <play#9412605>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -108,6 +108,7 @@
 * Hebrew: {{t+|he|משחק|m|tr=misḥāq}}
 * Hungarian: {{t+|hu|színdarab}}, {{t+|hu|darab}}
 * Indonesian: {{t|id|pentas}}
+* Indonesian: {{t|id|pentas}}
 * Italian: {{t+|it|dramma|m}}
 {{trans-mid}}
 * Japanese: [[演劇]] (えんげき, engeki)
