iwiki +[[:za:Germany]] <Germany#9426522>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -198,6 +198,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 [[ta:Germany]]
 [[th:Germany]]
 [[tr:Germany]]
+[[za:Germany]]
 [[vi:Germany]]
 [[vo:Germany]]
 [[zh:Germany]]
