--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -120,6 +120,7 @@
 [[zh-min-nan:United States of America]]
 [[et:United States of America]]
 [[el:United States of America]]
+[[es:United States of America]]
 [[fr:United States of America]]
 [[gl:United States of America]]
 [[ko:United States of America]]
