--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -60,7 +60,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * Japanese: {{t+|ja|ドイツ|tr=Doitsu}}, {{t+|ja|独逸|tr=Doitsu}} {{qualifier|obsolete}}
 * [[Kannada]]: {{t-|kn|ಜರ್ಮನಿ|tr=jarmani|sc=Knda|xs=Kannada}}
 * [[Khmer]]: {{Khmr|[[ប្រទេស​អាឡឺម៉ង់]]}} (bprədtēh āleumong)
-* Korean: {{t+|ko|독일|tr=Dogil|sc=Hang}}; {{t|ko|도이췰란드|tr=Doichwillandeu|sc=Hang}} (''North Korea'')
+* Korean: {{t+|ko|독일|tr=Dogil|sc=Hang}}; {{t|ko|도이췰란드|tr=Doichwillandeu|sc=Hang}} (''North Korea''), {{t|ko|獨逸|sc=Kore}}
 * Latin: {{t+|la|Germania|f}}
 {{trans-mid}}
 * Latvian: {{t+|lv|Vācija|f|xs=Latvian}}
@@ -88,7 +88,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * Serbian:
 *: Cyrillic: [[Немачка]] {{f}}
 *: Roman: [[Nemačka]] {{f}}
-* Slovak: [[Nemecko]] {{n}}
+* Slovak: [[Nemecko]] {{n}}, {{t|sk|Nemecko|n}}
 * Slovene: {{t+|sl|Nemčija|f}}
 * Spanish: {{t+|es|Alemania|f}}
 * Swahili: [[Ujerumani]] ''(noun 6)'', {{t+|sw|Ujerumani|xs=Swahili}}
@@ -99,7 +99,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * Turkish: {{t+|tr|Almanya}}
 * Ukrainian: {{t+|uk|Німеччина|f|tr=Niméččyna|xs=Ukrainian}}
 * [[Uyghur]]: {{t-|ug|گېرمانىيە|tr=gérmaniye|sc=ug-Arab|xs=Uyghur}}
-* Vietnamese: {{t|vi|nước Đức|xs=Vietnamese}}, {{t+|vi|Đức|xs=Vietnamese}}
+* Vietnamese: {{t|vi|nước Đức|xs=Vietnamese}}, {{t+|vi|Đức|xs=Vietnamese}}, {{t|vi|德}}
 * [[Võro]]: [[S'aksamaa]]
 * Welsh: {{t-|cy|Almaen|alt=Yr Almaen|f|xs=Welsh}}
 * [[West Frisian]]: [[Dútslân]] {{n}}
