--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -62,7 +62,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Serbian: [[грана]] (grana) {{f}}, [[вејка]] (vejka) {{f}} (leafless branch)
 * Slovak: {{t-|sk|vetva|f}}
 * Slovene: {{t+|sl|veja|f}}
-* Spanish: {{t+|es|ramo|m}},  {{t+|es|rama|f}}
+* Spanish: {{t+|es|rama|f}}
 * Swahili: {{t+|sw|tanzu|xs=Swahili}}
 * [[Tagalog]]: {{t-|tl|sanga|xs=Tagalog}}
 * [[Telugu]]: [[కొమ్మ]], [[శాఖ]]
@@ -158,6 +158,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * {{ttbc|Serbian}}:
 *: Cyrillic: [[грана#Serbian|грана]] {{f}} (1, 2)
 *: Roman: [[grana#Serbian|grana]] {{f}} (1, 2)
+* {{ttbc|Spanish}} {{t+|es|ramo|m}}  
 * {{ttbc|Swahili}}: [[tawi]]
 {{trans-bottom}}
 
