--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -282,7 +282,7 @@ From {{etyl|ang|en}} {{term|brycġian|lang=ang}}.
 
 # To be or make a bridge over something.
 #: ''With enough cable, we can '''bridge''' this gorge.''
-# {{idiomatic}} To [[span]] as if with a bridge.
+# To [[span]] as if with a bridge.
 #: ''The two groups were able to '''bridge''' their differences.''
 # {{music}} To [[transition]] from one piece or section of music to another without stopping.
 #: ''We need to bridge that [[jam]] into "The Eleven".''
