t+et:[[leidma]] ([[WT:EDIT|Assisted]]) <find#9455681>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -49,6 +49,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|fenþanan}} (c
 * [[Egyptian]]: {{tø|egy|gm|sc=Egyp}}
 *: <hiero>gm-m</hiero>
 * Esperanto: {{t+|eo|trovi|xs=Esperanto}}
+* Estonian: {{t|et|leidma}}
 * Finnish: {{t+|fi|löytää}}
 * French: {{t+|fr|trouver}}
 * Georgian: {{tø|ka|მიგნება|tr=migneba|sc=Geor}}
