--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -152,115 +152,113 @@ From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{et
 ===Verb===
 {{en-verb|catches|catching|caught}}
 
-# {{transitive}} To [[seize]] a moving object, with the hands or otherwise. {{jump|seize in motion|s|t}}
-#: ''I will throw you the ball, and you '''catch''' it.''
-#: ''Watch me '''catch''' this raisin in my mouth.''
-# {{transitive}} To [[capture]] or [[snare]], especially an animal. {{jump|capture prey|s}}
-#: ''I hope I '''catch''' a fish.''
-# {{transitive}} To [[seize]] after a [[pursuit]]. {{jump|pursue and seize|s}}
-#: ''He ran but we '''caught''' him at the exit.''
-#: ''The police '''caught''' the robber at a nearby casino.''
-# {{transitive}} To grasp mentally: [[perceive]] and [[understand]]. {{jump|perceive and understand|t}}
-#: ''Did you '''catch''' his name?
-#: ''Did you '''catch''' the way she looked at him?''
-# {{transitive}} To [[attract]] and [[hold]].
-#: ''He managed to '''catch''' her attention.''
-# {{transitive}} To [[charm]] or [[entrance]].
-#* {{quote-book|2004|Catherine Asaro|The Moon's Shadow|page=40|url=http://books.google.com/books?id=O2Rj1kYTF1kC|isbn=076534324X
-|passage=No, a far more natural beauty '''caught''' him. }}
-# {{transitive}} To [[discover]], to [[surprise]] in the act.
-#: ''He was '''caught''' on video robbing the bank.''
-#: ''He was '''caught''' in the act of stealing a biscuit.''
-# {{transitive}} To [[seize]] (an [[opportunity]]). {{jump|seize opportunity|t}}
-#* {{quote-book|1811|[[w:Jane Austen|Jane Austen]]|Sense and Sensibility|section=[[wikisource:Sense_and_Sensibility/Chapter_18|Chapter 18]]
-|passage={{...}} she internally resolved henceforward to '''catch''' every opportunity of eyeing the hair and of satisfying herself, {{...}} }}
-# {{transitive}} To [[take in]]; to [[watch]] or [[listen to]] (an entertainment).
-#: ''I have some free time tonight so I think I'll '''catch''' a movie.''
-# {{transitive}} To be [[in time]] for; to [[reach]] in time (especially, in time to leave).
-#: ''I would love to have dinner but I have to '''catch''' a plane.''
-# {{transitive}} To [[travel]] by means of.
-#* {{quote-book|1987|[[w:A.J. Quinnell|A.J. Quinnell]]|In the Name of the Father|page=111|url=http://books.google.com/books?id=GJc1izYyDIkC|isbn=0453005713
-|passage=After about a kilometer I '''caught''' a taxi to Santa Croce.}}
-# {{transitive}} To [[spread]] or be [[convey]]ed to.
-#: ''The fire spread slowly until it '''caught''' the eaves of the barn.''
-# {{transitive}} To be [[infect]]ed by.
-#: ''Everyone seems to be '''catching''' the flu this week.''
-# {{transitive}} To be [[affect]]ed by; to join in.
-#: ''She finally '''caught''' the mood of the occasion.''
-# {{transitive}} To [[regain]] something necessary, such as [[breath]] or [[sleep]].
-#: ''I have to stop for a moment and '''catch''' my breath.''
-#: ''I '''caught''' some Z's on the train.''
-# {{transitive}} To [[overtake]] or [[catch up]] to.
-#: ''We didn't '''catch''' the van until the next exit.''
-# {{transitive}} To [[receive]] and [[retain]].
-#: ''The bucket '''catches''' water from the downspout.''
-# {{transitive}} To have something be [[hold back|held back]] or [[impede]]d.
-#: ''I '''caught''' my heel on the threshold.''
-# {{transitive}} To [[suffer]] from; to [[receive]].
-#: ''You're going to '''catch''' a beating if they find out.''
-#: ''We '''caught''' a run of bad luck this year.''
-# {{transitive}} To [[reproduce]] or [[echo]] a spirit or idea faithfully.
-#: ''You've really '''caught''' his determination in this sketch.''
-# {{intransitive}} To [[engage]], [[stick]], or [[latch]]. {{jump|engage|t}}
-#: ''Push it in until it '''catches'''.''
-# {{intransitive}} To make a [[grasp]]ing or [[snatch]]ing motion.
-#: ''He '''caught''' at the railing as he fell.''
-# {{intransitive}} To [[catch fire]]; to [[ignite]].
-#: ''The trees '''caught''' quickly in the dry wind.''
-# {{intransitive}} To be [[hold back|held back]] or [[impede]]d.
-#: ''Be careful your dress doesn't '''catch''' on that knob.''
-# {{intransitive}} To [[hesitate]], as if [[momentarily]] stuck.
-#: ''His voice '''caught''' when he came to his father's name.''
-#: ''I was about to say something unpleasant, but I managed to '''catch''' myself.''
-# {{intransitive|rare}} To [[spread]] by [[contagion]].
-#: ''The plague '''caught''' there, and left half the town dead.''
-# {{intransitive}} To [[serve]] well or poorly for catching, especially for catching fish.
-#* {{quote-book|1877||Annual Report of the Ohio State Board of Agriculture|page=135|url=http://books.google.com/books?id=tXUSAAAAYAAJ
-|passage=The nets '''caught''' well, and Mr. Deeley reported it the best fishing ground he ever tried. }}
-# {{transitive}} To [[hit]] someone in a specific place.
-#: ''If he '''catches''' you on the chin, you'll be on the mat.''
-# {{transitive}} To be [[hit]] by something. {{jump|be hit|s}}
-#: ''He '''caught''' a bullet in the back of the head last year.''
-# {{transitive}} To [[touch]] or be touched by, especially wind or light.
-#: ''The sunlight '''caught''' the leaves and the trees turned to gold.''
-# {{transitive}} To [[entrap]] or [[trip up]] a person, especially deceptively.
-#* {{quote-book|1611||[[w:Authorized King James Version|Authorized King James Version]]|section=[[wikisource:Bible_(King_James)/Mark#Chapter_12|Mark 12:13 ]]
-|passage=And they send unto him certain of the Pharisees and of the Herodians, to '''catch''' him in his words.}}
-# {{transitive|rare}} To become [[pregnant]].
-#* {{quote-book|2002|Orpha Caton|Shadow on the Creek|page=102-103|url=http://books.google.com/books?id=GmLXMp0c3NMC|isbn1591602653
-|passage=Had Nancy got '''caught''' with a child?  If so she would destroy her parent's dreams for her.}}
-# {{transitive|dated}} To [[marry]] or enter into a similar [[relationship]] with a man.
-#* {{quote-book|1933|[[w:Sinclair Lewis|Sinclair Lewis]]|Ann Vickers|page=108|url=http://books.google.com/books?id=NF5JAAAAMAAJ
-|passage=The public {{...}} said that Miss Bogardus was a suffragist because she had never '''caught''' a man; that she wanted something, but it wasn't the vote.}}
-#* {{quote-book|2006|Michael Collier and Georgia Machemer|Medea|page=23|url=http://books.google.com/books?id=XKDr4vXVbvIC|isbn=0195145666
-|passage=As for Aspasia, concubinage with Pericles brought her as much honor as she could hope to claim in Athens. {{...}} from the moment she '''caught''' her man, this influential, unconventional woman became a lightning rod {{...}} }}
-# {{transitive|computing}} To handle an [[exception]]. {{jump|handle error|t}}
-#: ''When the program '''catches''' an exception, this is recorded in the log file.''
-# {{transitive|baseball}} To play a specific period of time as the [[catcher]].
-#: ''He '''caught''' the last three innings.''
-# {{transitive|cricket}} To end a player's [[innings]] by catching a hit ball before the first bounce.
-#: ''Townsend hit 29 before he was '''caught''' by Wilson.''
-# {{transitive|rowing}} To lower one's oars into the water at the beginning of the stroke.
-#* {{quote-book|1906|Arthur W. Stevens|Practical Rowing with Scull and Sweep|url=http://books.google.com/books?id=M6ICAAAAYAAJ|page=63
-|passage=Stop gathering, in that gradual fashion, and '''catch''' the water sharply and decisively.}}
-# {{transitive|surfing}} To contact a [[wave]] in such a way that one can ride it back to [[shore]].
-#* {{quote-book|2001|John Lull|Sea Kayaking Safety & Rescue|page=203|url=http://books.google.com/books?id=h5IVyQlKsL4C|isbn=0899972748
+# To capture, overtake.
+## {{transitive}} To [[capture]] or [[snare]] (someone or something which would rather escape). {{jump|capture prey|s}} {{defdate|from 13th c.}}
+##: ''I hope I '''catch''' a fish.''
+##: ''He ran but we '''caught''' him at the exit.''
+##: ''The police '''caught''' the robber at a nearby casino.''
+## {{transitive}} To [[entrap]] or [[trip up]] a person; to [[deceive]]. {{defdate|from 14th c.}}
+##*'''1611''', ''[[w:Authorized King James Version|Authorized King James Version]]'', [[wikisource:Bible_(King_James)/Mark#Chapter_12|Mark 12:13]]:
+##*:And they send unto him certain of the Pharisees and of the Herodians, to '''catch''' him in his words.
+## {{context|transitive|figurative|dated}} To [[marry]] or enter into a similar [[relationship]] with.
+##*'''1933''', [[w:Sinclair Lewis|Sinclair Lewis]], ''Ann Vickers'', page 108, [url=http://books.google.com/books?id=NF5JAAAAMAAJ]:
+##*:The public {{...}} said that Miss Bogardus was a suffragist because she had never '''caught''' a man; that she wanted something, but it wasn't the vote.
+##*'''2006''', Michael Collier and Georgia Machemer, ''Medea'', page 23, [url=http://books.google.com/books?id=XKDr4vXVbvIC|isbn=0195145666]:
+##*:As for Aspasia, concubinage with Pericles brought her as much honor as she could hope to claim in Athens. {{...}} from the moment she '''caught''' her man, this influential, unconventional woman became a lightning rod {{...}}
+## {{transitive}} To reach (someone) with a [[strike]], [[blow]], weapon etc. {{defdate|from 16th c.}}
+##: ''If he '''catches''' you on the chin, you'll be on the mat.''
+## {{transitive}} To [[overtake]] or [[catch up]] to; to be in time for. {{defdate|from 17th c.}}
+##: ''If you leave now you might '''catch''' him.''
+##: ''I would love to have dinner but I have to '''catch''' a plane.''
+## {{transitive}} To [[discover]] unexpectedly; to [[surprise]] (someone doing something). {{defdate|from 17th c.}}
+##: ''He was '''caught''' on video robbing the bank.''
+##: ''He was '''caught''' in the act of stealing a biscuit.''
+## {{transitive}} To [[travel]] by means of. {{defdate|from 19th c.}}
+##*'''1987''', [[w:A.J. Quinnell|A.J. Quinnell]], ''In the Name of the Father'', page 111, [url=http://books.google.com/books?id=GJc1izYyDIkC|isbn=0453005713]:
+##*:After about a kilometer I '''caught''' a taxi to Santa Croce.
+## {{transitive|rare}} To become [[pregnant]]. (Only in past tense or as participle.) {{defdate|from 19th c.}}
+##*'''2002''', Orpha Caton, ''Shadow on the Creek'', page 102-103, [url=http://books.google.com/books?id=GmLXMp0c3NMC|isbn1591602653]:
+##*:Had Nancy got '''caught''' with a child?  If so she would destroy her parent's dreams for her.
+# To seize hold of.
+## {{transitive|dated}} To [[grab]], [[seize]], take hold of. {{defdate|from 13th c.}}
+##:''I '''caught''' her by the arm and turned her to face me.''
+## {{transitive}} To [[take]] or [[replenish]] something necessary, such as [[breath]] or [[sleep]]. {{defdate|from 14th c.}}
+##: ''I have to stop for a moment and '''catch''' my breath.''
+##: ''I '''caught''' some Z's on the train.''
+## {{transitive}} To [[grip]] or [[entangle]]. {{defdate|from 17th c.}}
+##:''My leg was '''caught''' in a tree-root.''
+## {{intransitive}} To be [[hold back|held back]] or [[impede]]d.
+##: ''Be careful your dress doesn't '''catch''' on that knob.''
+##: ''His voice '''caught''' when he came to his father's name.''
+## {{intransitive}} To [[engage]] with some mechanism; to [[stick]], to succeed in interacting with something or initiating some process. {{jump|engage|t}}
+##: ''Push it in until it '''catches'''.''
+##: ''The engine finally '''caught''' and roared to life.''
+## {{transitive}} To have something be [[hold back|held back]] or [[impede]]d.
+##:''I '''caught''' my heel on the threshold.''
+## {{intransitive}} To make a [[grasp]]ing or [[snatch]]ing motion (at). {{defdate|from 17th c.}}
+##: ''He '''caught''' at the railing as he fell.''
+## {{transitive}} Of [[fire]], to [[spread]] or be [[convey]]ed to. {{defdate|from 18th c.}}
+##: ''The fire spread slowly until it '''caught''' the eaves of the barn.''
+## {{transitive|rowing}} To [[grip]] (the water) with one's oars at the beginning of the stroke. {{defdate|from 19th c.}}
+##*'''1906''', Arthur W. Stevens, ''Practical Rowing with Scull and Sweep'', [url=http://books.google.com/books?id=M6ICAAAAYAAJ|page=63]:
+##*:Stop gathering, in that gradual fashion, and '''catch''' the water sharply and decisively.
+## {{intransitive|agriculture}} To [[germinate]] and set down [[root]]s. {{defdate|from 19th c.}}
+##: ''The seeds '''caught''' and grew.''
+## {{transitive|surfing}} To contact a [[wave]] in such a way that one can ride it back to [[shore]].
+##* {{quote-book|2001|John Lull|Sea Kayaking Safety & Rescue|page=203|url=http://books.google.com/books?id=h5IVyQlKsL4C|isbn=0899972748
 |passage=If you are surfing a wave through the rocks, make sure you have a clear route before '''catching''' the wave. }}
-# {{transitive|US|dialectal}} To [[deliver]] or assist in the delivery of a [[baby]].
-#* {{quote-book|1994|[[w:Chris Offutt|Chris Offutt]]|The Vintage Book of American Short Stories|chapter=Aunt Granny Lith|page=391|url=http://books.google.com/books?id=1q4GtKCPl3MC|isbn=0679745130
-|passage= The last granny-woman in these pans. She '''caught''' three hundred babies on this creek. }}
-# {{intransitive|agriculture}} To [[germinate]] and set down [[root]]s.
-#: ''The seeds '''caught''' and grew.''
-# {{intransitive|automotive|of an engine}} To [[turn over]].
-#: ''The engine finally '''caught''' and roared to life.''
-# {{intransitive|sailing|of sails}} To receive [[wind]]; to be blown on.
-#* {{quote-book|2003|Jerry Dennis|The Living Great Lakes|page=63|url=http://books.google.com/books?id=3P8lsPL0FQQC|isbn=0312251939
-|passage={{...}} the sails '''caught''' and filled, and the boat jumped to life beneath us.}}
+## {{transitive|computing}} To handle an [[exception]]. {{jump|handle error|t}} {{defdate|from 20th c.}}
+##: ''When the program '''catches''' an exception, this is recorded in the log file.''
+# To intercept.
+## {{transitive}} To [[seize]] or intercept a object moving through the air (or, sometimes, some other medium). {{jump|seize in motion|s|t}} {{defdate|from 16th c.}}
+##:''I will throw you the ball, and you '''catch''' it.''
+##:''Watch me '''catch''' this raisin in my mouth.''
+## {{context|transitive|now|_|rare}} To [[seize]] (an [[opportunity]]) when it occurs. {{jump|seize opportunity|t}} {{defdate|from 16th c.}}
+##*'''1811''', [[w:Jane Austen|Jane Austen]], ''Sense and Sensibility'', [[wikisource:Sense_and_Sensibility/Chapter_18|Chapter 18]]:
+##*:she internally resolved henceforward to '''catch''' every opportunity of eyeing the hair and of satisfying herself, {{...}}
+## {{transitive|cricket}} To end a player's [[innings]] by catching a hit ball before the first bounce. {{defdate|from 18th c.}}
+##: ''Townsend hit 29 before he was '''caught''' by Wilson.''
+## {{transitive|intransitive|baseball}} To play (a specific period of time) as the [[catcher]]. {{defdate|from 19th c.}}
+##: ''He '''caught''' the last three innings.''
+# To receive (by being in the way).
+## {{transitive}} To be the victim of (something unpleasant, painful etc.). {{defdate|from 13th c.}}
+##: ''You're going to '''catch''' a beating if they find out.''
+## {{transitive}} To be touched or affected by (something) through exposure. {{defdate|from 13th c.}}
+##: ''The sunlight '''caught''' the leaves and the trees turned to gold.''
+##:''Her hair was '''caught''' by the light breeze.''
+## {{transitive}} To be [[infect]]ed by (an illness). {{defdate|from 16th c.}}
+##: ''Everyone seems to be '''catching''' the flu this week.''
+## {{transitive|intransitive}} To [[receive]] or be affected by (wind, water, fire etc.). {{defdate|from 18th c.}}
+##: ''The bucket '''catches''' water from the downspout.''
+##: ''The trees '''caught''' quickly in the dry wind.''
+##*'''2003''', Jerry Dennis, ''The Living Great Lakes'', page 63 [url=http://books.google.com/books?id=3P8lsPL0FQQC|isbn=0312251939]:
+##*:the sails '''caught''' and filled, and the boat jumped to life beneath us.
+## {{transitive}} To [[acquire]], as though by infection; to take on through sympathy or infection. {{defdate|from 16th c.}}
+##: ''She finally '''caught''' the mood of the occasion.''
+## {{transitive}} To be [[hit]] by something. {{jump|be hit|s}}
+##: ''He '''caught''' a bullet in the back of the head last year.''
+## {{intransitive}} To [[serve]] well or poorly for catching, especially for catching fish.
+##* {{quote-book|1877||Annual Report of the Ohio State Board of Agriculture|page=135|url=http://books.google.com/books?id=tXUSAAAAYAAJ
+|passage=The nets '''caught''' well, and Mr. Deeley reported it the best fishing ground he ever tried. }}
+# To take in with one's senses or intellect.
+## {{transitive}} To grasp mentally: [[perceive]] and [[understand]]. {{jump|perceive and understand|t}} {{defdate|from 16th c.}}
+##: ''Did you '''catch''' his name?
+##: ''Did you '''catch''' the way she looked at him?''
+## {{transitive}} To [[take in]]; to [[watch]] or [[listen to]] (an entertainment). {{defdate|from 20th c.}}
+##: ''I have some free time tonight so I think I'll '''catch''' a movie.''
+## {{transitive}} To [[reproduce]] or [[echo]] a spirit or idea faithfully. {{defdate|from 17th c.}}
+##: ''You've really '''caught''' his determination in this sketch.''
+# To seize attention, interest.
+## {{transitive}} To [[charm]] or [[entrance]]. {{defdate|from 14th c.}}
+##*'''2004''', Catherine Asaro, ''The Moon's Shadow'', page 40 [url=http://books.google.com/books?id=O2Rj1kYTF1kC|isbn=076534324X]:
+##*:No, a far more natural beauty '''caught''' him.
+## {{transitive}} To [[attract]] and [[hold]] (a faculty or organ of sense). {{defdate|from 17th c.}}
+##: ''He managed to '''catch''' her attention.''
+##:''The enormous scarf did '''catch''' my eye.''
 
 ====Synonyms====
 * {{jump|s|seize in motion}} [[snatch]], [[grab]]
 * {{jump|s|capture prey}} [[capture]], [[take]]; [[snare]], [[hook]]
-* {{jump|s|pursue and seize}} [[take down]], [[collar]], [[apprehend]], [[arrest]]
 * {{jump|s|be hit}} [[take]], [[get]]
 
 ====Antonyms====
@@ -289,7 +287,7 @@ From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{et
 {{rel-bottom}}
 
 ====Translations====
-{{trans-top|to seize an object, especially in the hands {{jump|t|seize object}} }}
+{{trans-top|to intercept an object in the air etc. {{jump|t|seize object}} }}
 * Arabic: {{t|ar|أمسك|tr='amsaka}},  {{t-|ar|مسك|tr=másaka}}
 * Bulgarian: {{t|bg|хващам}},  {{t|bg|улавям}}
 * Chinese:
