t+nl:[[schouwspel]] ([[WT:EDIT|Assisted]]) <play#9484903>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -80,6 +80,7 @@
 
 {{trans-top|literary composition}}
 * Arabic: {{t|ar|مسرحية|f|tr=masraHiyya}}
+* Dutch: {{t|nl|schouwspel|n}}
 * Finnish: {{t+|fi|näytelmä}}
 * [[Macedonian]]: {{t-|mk|драма|f|tr=dráma}},  {{t|mk|пиеса|f|tr=piésa}}
 * [[Norwegian Bokmål]]: {{tø|nb|skuespill|n}}
