t+ro:[[european]] ([[WT:EDIT|Assisted]]) <European#9488918>

--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -45,6 +45,7 @@
 * Maltese: [[ewropew]] {{m}}, [[ewropea]] {{f}}
 * Polish: {{t+|pl|europejski|m}}, {{t-|pl|europejska|f}}
 * Portuguese: {{t+|pt|europeu|m}}, {{t+|pt|europeia|f}}
+* Romanian: {{t|ro|european}}
 * Russian: {{t+|ru|европейский|tr=jevropéjskij}}
 * Spanish: {{t+|es|europeo}}
 * Swedish: {{t+|sv|europeisk}}
