--- a/en/垠/垠.13092.wikitext
+++ b/en/垠/垠.13092.wikitext
@@ -20,9 +20,16 @@
 
 ----
 
-==Japanese==
+----
 
---[[Special:Contributions/81.215.172.231|81.215.172.231]] 21:40, 15 July 2010 (UTC)<nowiki>
+==Japanese==
+===Kanji===
+{{ja-kanji|grade=|rs=土06}}
+
+# {{defn|Japanese}}
+
+====Readings====
+* {{ja-readings|on=[[ぎん]] (gin), [[ごん]] (gon)|kun=[[さかい]] (sakai), [[きし]] (kishi)}}
 
 ----
 
@@ -41,18 +48,6 @@
 {{cmn-hanzi|pin=[[yín]] ([[yin2]])|wg=yin<sup>2</sup>}}
 
 # {{defn|Mandarin}}
-
-----
-
-=={{}}==
-</nowiki>===Kanji===
-{{ja-kanji|grade=|rs=土06}}
-
-# {{defn|Japanese}}
-
-====Readings====
-{{rfc-level|Readings at L4+ not in L3 POS section}}
-* {{ja-readings|on=[[ぎん]] (gin), [[ごん]] (gon)|kun=[[さかい]] (sakai), [[きし]] (kishi)}}
 
 [[fr:垠]]
 [[ko:垠]]
