--- a/en/垠/垠.13092.wikitext
+++ b/en/垠/垠.13092.wikitext
@@ -22,11 +22,7 @@
 
 ==Japanese==
 
-
-----
---[[Special:Contributions/81.215.172.231|81.215.172.231]] 21:40, 15 July 2010 (UTC)<nowiki>
-== {{}} ==
-</nowiki>===Kanji===
+===Kanji===
 {{ja-kanji|grade=|rs=土06}}
 
 # {{defn|Japanese}}
