--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -391,6 +391,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * Danish: [[skære]], [[beskære]], [[nedsætte]]
 * Dutch: {{t+|nl|snijden}} in, {{t+|nl|verminderen}}
 * Finnish: {{t+|fi|leikata}}
+* French: {{t|fr|réduire}}
 {{trans-mid}}
 * German: {{t+|de|beschneiden}}
 * Icelandic: {{t|is|skera niður}}
