--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -81,6 +81,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Arabic: {{t|ar|تحدث|tr=taHáddatha}},  {{t|ar|تكلم|tr=takállama}}
 * Armenian: {{t+|hy|խոսել|tr=khosel}}
 * Belarusian: {{t|be|гаварыць|tr=havarýc’|xs=Belarusian}},  {{t|be|размаўляць|tr=razmaŭljác’|xs=Belarusian}}
+* Bengali: {{t|bn|বলা|tr=bôla|sc=Beng}}
 * [[Breton]]: [[komz]]
 * Bulgarian: {{t+|bg|говоря|tr=govorja}} (1, 6)
 * [[Catalan]]: [[parlar]]
@@ -107,8 +108,8 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Latin: {{t-|la|dicere}},  {{t-|la|fabulari}}
 * Lithuanian: {{t+|lt|kalbėti|xs=Lithuanian}}
 * [[Macedonian]]: {{t|mk|зборува|tr=zboruva}}
-* [[Nahuatl]]: [[tlatoa]]
 {{trans-mid}}
+* [[Nahuatl]]: [[tlatoa]]
 * [[Ngarrindjeri]]: {{tø|nay|kungun}}
 * Norwegian: {{t+|no|snakke}}
 * [[Occitan]]: [[parlar]]
