t+ht:[[chwazi]] ([[WT:EDIT|Assisted]]) <choose#9535947>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -99,6 +99,7 @@
 * Georgian: {{t-|ka|ამორჩევა|tr=amorčeva|sc=Geor|xs=Georgian}}
 * German: {{t+|de|auswählen}}, {{t+|de|wählen}}
 * Greek: {{t+|el|διαλέγω}} (dialégo)
+* [[Haitian Creole]]: {{tø|ht|chwazi}}
 * Hebrew: {{t-|he|בחר|tr=bakhár}}
 * Hindi: {{t|hi|चुनना|tr=cunnā|xs=Hindi}}
 * Hungarian: {{t+|hu|kiválaszt}}
