--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -18,10 +18,11 @@ Alternate etymology connects {{frk}} *''blund'' to {{proto|Germanic|blundaz|blon
 {{en-noun}}
 
 # {{British}} A person of [[fair]] skin and fair hair (usually spelled "''blonde''" when referring to a woman).
+# {{US}} {{alternative spelling of|blonde}}
 # {{British}} A [[pale]] [[golden]] [[brown]] [[colour]].
 
 ====Usage notes====
-: In the English language, it is only one of a few distinct words where the gender differentiation is actually reflected in the spelling of the word (i.e. ''She is a blonde woman.'' vs. ''He is a blond man.''), even though this is a relatively common occurrence in other languages. "Blond(e)" has only recently been borrowed from French into English to refer to light hair; [[traditional]] terms for light hair in English are "''fair(-haired)''", "''[[flaxen]]''", and "''[[towhead|tow headed]]''".
+: In English, this is one of few words where gender differentiation may be reflected in spelling, despite being relatively common in other languages. Not surprisingly, writers may use the spellings interchangeably. "Blond(e)" has only recently been borrowed from French into English to refer to light hair; [[traditional]] terms for light hair in English are "''fair(-haired)''", "''[[flaxen]]''", and "''[[towhead|tow headed]]''".
 
 ====Translations====
 {{trans-top|fair skinned/haired person}}
