--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -371,6 +371,7 @@ From {{etyl|la|rm}} {{term|plumbum||lead|lang=la}}
 # [[lead]] (metal)
 
 [[de:plum]]
+[[el:plum]]
 [[fa:plum]]
 [[fr:plum]]
 [[ko:plum]]
