--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -60,7 +60,7 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 * Persian: {{t|fa|نیوزیلند|xs=Persian}}
 * Polish: {{t+|pl|Nowa Zelandia|f}}
 * Portuguese: {{t+|pt|Nova Zelândia|f}}
-* [[Punjabi]]: {{t|pa|ਨਿਊਜੀਲੈਂਡ |sc=Guru}}
+* [[Punjabi]]: {{t|pa|ਨਿਊਜੀਲੈਂਡ |sc=Guru}}, {{t|pa|ਅਮਰੀਕਾ|f|sc=Guru}}
 * Romanian: {{t|ro|Noua Zeelandă|f}}
 * Russian: {{t+|ru|Новая Зеландия|f|tr=Nóvaja Zelándija}}
 * Serbo-Croatian:
