--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -15,24 +15,27 @@ From {{etyl|sh|en}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land
 ====Translations====
 {{trans-top|Former country in the Balkans}}
 * Albanian: {{t|sq|Jugosllavia|xs=Albanian}}
-* Arabic: {{Arab|[[يوغوسلافيا]]}} (yuğuslāfiya) {{f}}
+* Arabic: {{Arab|[[يوغوسلافيا]]}} (yuğuslāfiya) {{f}}, {{t|ar|يوغوسلافيا|f|tr=yughuslaafiya|sc=Arab}}
 * Armenian: {{t-|hy|Հարավսլավիա|tr=Haravslavia}}
+* Belarusian: {{t|be|Югаславія|f|tr=Juhaslávija|sc=Cyrl}}
 * Bosnian: {{t-|bs|Jugoslavija|f}}
+* Bulgarian: {{t|bg|Югославия|f|tr=Jugoslávija|sc=Cyrl}}
 * Chinese: [[南斯拉夫]] (Nánsīlāfū)
+*: Mandarin: {{t|zh|南斯拉夫|tr=Nánsīlāfū|sc=Hani}}
 * Croatian: {{t-|hr|Jugoslavija|f|alt=Jugòslāvija}}
-* Czech: [[Jugoslávie#Czech|Jugoslávie]] {{f}}
+* Czech: [[Jugoslávie#Czech|Jugoslávie]] {{f}}, {{t|cs|Jugoslávie|f}}
 * Danish: {{t-|da|Jugoslavien}}
 * Dutch: {{t-|nl|Joegoslavië}}
 * Esperanto: [[Jugoslavio]]
 * Finnish: {{t+|fi|Jugoslavia}}
 * French: {{t+|fr|Yougoslavie|f}}
 * German: {{t-|de|Jugoslavien|n}}
-* Greek: [[Γιουγκοσλαβία]] (Yiougkoslavía) {{f}}
+* Greek: [[Γιουγκοσλαβία]] (Yiougkoslavía) {{f}}, {{t|el|Γιουγκοσλαβία|f|tr=Yiougkoslavía|sc=Grek}}
 * Hungarian: {{t+|hu|Jugoszlávia}}
 {{trans-mid}}
 * Italian: {{t-|it|Jugoslavia}}, {{t-|it|Iugoslavia|f}}
 * Japanese: {{t-|ja|ユーゴスラビア|tr=Yūgosurabia}}, {{t-|ja|ユーゴスラヴィア|tr=Yūgosuravia}}
-* Korean: [[유고슬라비아]] (Yugoseullabia)
+* Korean: [[유고슬라비아]] (Yugoseullabia), {{t|ko|유고슬라비아|tr=Yugoseullabia|sc=Kore}}
 * [[Macedonian]]: {{t+|mk|Југославија|f|tr=Jugoslávija}}
 * Maltese: il-[[Jugoslavja]]
 * Polish: {{t+|pl|Jugosławia|f}}
@@ -40,11 +43,16 @@ From {{etyl|sh|en}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land
 * Russian: {{t+|ru|Югославия|f|tr=Jugoslávija}}
 * Serbian:
 *: Cyrillic: [[Југославија#Serbian|Југославија]] {{f}}
+*: Roman: {{t|sh|Jugoslavija|f|alt=Jugòslāvija}}
 *: Roman: [[Jugoslavija#Serbian|Jugoslavija]] {{f}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|Југославија|f|alt=Југо̀сла̄вија}}
+* Slovak: {{t|sk|Juhoslávie|f}}
 * Slovene: {{t+|sl|Jugoslavija|f}}
-* Spanish: Yugoslavia, [[Yugoeslavia]] {{f}}
+* Spanish: Yugoslavia, [[Yugoeslavia]] {{f}}, {{t|es|Yugoslavia|f}}, {{t|es|Yugoeslavia|f}}
 * Swedish: {{t+|sv|Jugoslavien}}
 * Turkish: {{t-|tr|Yugoslavya}}
+* Ukrainian: {{t|uk|Югославія|f|tr=Juhoslávija|sc=Cyrl}}
 {{trans-bottom}}
 
 ====Related terms====
