t+he:[[יוגוסלביה]] t+vi:[[Nam Tư]] ([[WT:EDIT|Assisted]]) <Yugoslavia#9543851>

--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -32,6 +32,7 @@ From {{etyl|sh|en}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land
 * Georgian: {{t|ka|იუგოსლავია|tr=iugoslavia|sc=Geor}}
 * German: {{t-|de|Jugoslavien|n}}
 * Greek: {{t|el|Γιουγκοσλαβία|f|tr=Yiougkoslavía|sc=Grek}}
+* Hebrew: {{t|he|יוגוסלביה|sc=Hebr}}
 * Hindi: {{t|hi|यूगोस्लाविया|tr=yūgōslāviyā|sc=Deva}}
 * Hungarian: {{t+|hu|Jugoszlávia}}
 {{trans-mid}}
@@ -54,6 +55,7 @@ From {{etyl|sh|en}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land
 * Thai: {{t|th|ยูโกสลาเวีย|tr=yoogòhtlaawia|sc=Thai}}
 * Turkish: {{t-|tr|Yugoslavya}}
 * Ukrainian: {{t|uk|Югославія|f|tr=Juhoslávija|sc=Cyrl}}
+* Vietnamese: {{t|vi|Nam Tư}}
 {{trans-bottom}}
 
 ====Related terms====
