iwiki +[[:my:find]] <find#9556779>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -215,6 +215,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|fenþanan}} (c
 [[li:find]]
 [[hu:find]]
 [[ml:find]]
+[[my:find]]
 [[nl:find]]
 [[ja:find]]
 [[no:find]]
