--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -196,6 +196,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 [[ku:flesh]]
 [[hu:flesh]]
 [[ml:flesh]]
+[[my:flesh]]
 [[oc:flesh]]
 [[pl:flesh]]
 [[pt:flesh]]
