--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -44,7 +44,7 @@
 * Finnish: {{t+|fi|satama}}
 * French: {{t+|fr|port|m}}
 * German: {{t+|de|Hafen|m}}
-* Greek: {{t+|el|λιμάνι|n|tr=limáni}}
+* Greek: {{t+|el|λιμάνι|n|tr=limáni}}, {{t|el|λιμένας|m|tr=liménas|sc=Grek}}
 * Hungarian: {{t+|hu|kikötő}}
 * [[Ido]]: [[portuo]]
 {{trans-mid}}
