--- a/en/坡/坡.13028.wikitext
+++ b/en/坡/坡.13028.wikitext
@@ -47,6 +47,12 @@
 
 # {{defn|Mandarin}}
 
+----
+
+==Vietnamese==
+===Han character===
+'''坡''' ([[pha]], [[bờ]], [[phơ]], [[da]])
+
 [[fr:坡]]
 [[ko:坡]]
 [[hu:坡]]
