--- a/en/坡/坡.13028.wikitext
+++ b/en/坡/坡.13028.wikitext
@@ -50,8 +50,11 @@
 ----
 
 ==Vietnamese==
+
 ===Han character===
 '''坡''' ([[pha]], [[bờ]], [[phơ]], [[da]])
+
+# {{defn|Vietnamese}}
 
 [[fr:坡]]
 [[ko:坡]]
