--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -12,7 +12,7 @@
 From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lang=en}}.  Cognate with Dutch {{term|brug|lang=nl}}, German {{term|Brücke|lang=de}}.
 
 ====Noun====
-[[Image:48 - Mende - Pont Notre-Dame.jpg|thumb|A bridge (sense 1)]]
+[[Image:48 - Mende - Pont Notre-Dame.jpg|thumb|A bridge (sense 1)]][[Image:Violin_bridge.jpg|thumb|right|The bridge of a violin]]
 {{en-noun}}
 
 # A [[construction]] or [[natural]] [[feature]] that [[span]]s a [[divide]].
