--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -231,6 +231,7 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 * Dutch: {{t+|nl|kam|m}}
 {{trans-mid}}
 * Esperanto: {{t-|eo|ponto|xs=Esperanto}}
+* French: {{t|fr|chevalet|m}}
 * Greek: {{t|el|καβαλάρης|m|tr=kavaláris}}
 {{trans-bottom}}
 
