--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -24,6 +24,7 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 ====Translations====
 {{trans-top|that is}}
 * Arabic: {{Arab|[[يعني]]}} {{IPAchar|(yáʕni)}}
+* Armenian: {{t|hy|այսինքն|tr=aysink’n|sc=Armn}}
 * Bulgarian: [[т.е.]] ([[тоест]], ''toest'')
 * Croatian: {{t-|hr|tj.}} ({{l|hr|to|tȏ}} {{l|hr|jest|jȅst}})
 * Czech: {{t|cs|tj.}} ([[to]] [[je]])
@@ -34,8 +35,8 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 * French: {{t+|fr|c.-à-d.}}
 * German: [[d. h.]] {{i|[[das heißt]]}}
 * Greek: [[δηλαδή]], [[ήτοι]], [[τουτέστιν]]
-* Hebrew: {{t|he|דהיינו|tr=deháinu}},  {{t|he|כלומר|tr=klomár}},  {{t|he|זאת אומרת|tr=zót oméret}}
 {{trans-mid}}
+* Hebrew: {{t|he|דהיינו|tr=deháinu}},  {{t|he|כלומר|tr=klomár}},  {{t|he|זאת אומרת|tr=zót oméret}}
 * Hungarian: {{t+|hu|azaz}}
 * Icelandic: [[þ.e.]] {{i|[[það]] [[er]]}}, [[þ.e.a.s.]] {{i|[[það]] [[er]] [[að]] [[segja]]}}
 * Italian: {{t+|it|cioè}}
