/* Verb */ rm senses that are actually for "[[buter]]", per RFV discussion <butter#9637562>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -312,13 +312,7 @@ From ''[[butte#French|butte]]''.
 {{fr-verb}}
 
 # To [[heap]]
-#* '''''butter''' les pommes de terre.''
-# To [[hit]] an obstacle.
-#* ''La raison '''butte''' sur le concept du bien et du mal.''
-#* ''Là, je '''butte'''.''
-#:* I don't understand.
-# {{slang|lang=fr}} {{rfv-sense}} To [[kill]] someone.
-#* ''Je vais le '''butter''', ce mec.''
+#: '''''butter''' les pommes de terre.''
 
 ====Conjugation====
 {{fr-conj-er|butt|avoir}}
