--- a/en/c/crept.6842.wikitext
+++ b/en/c/crept.6842.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|/'krɛpt/}}
+* {{IPA|/ˈkrɛpt/}}
 * {{audio|en-us-crept.ogg|Audio (US)}}
 * {{rhymes|ɛpt}}
 
