--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -41,7 +41,7 @@
 * Norwegian: {{t|no|klenge}}
 * Portuguese: {{t+|pt|agarrar}}
 * Russian: {{t|ru|льнуть|tr=l'nut'}}, {{t|ru|прилипать|tr=prilipát'}}, {{t|ru|цепляться|tr=ceplját'sja}}
-* Spanish: [[sostener]], [[aferrarse]] or [[sujetar]]
+* Spanish: {{t|es|sostener}}, {{t|es|aferrar|alt=aferrarse}}, {{t|es|sujetar}}
 {{trans-bottom}}
 
 ===References===
