Added an antonym "unbrick" <brick#9681536>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -191,6 +191,9 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 #*: installing third-party firmware will void your warranty, and it is possible that you may '''brick''' your router.
 # {{regional|_|slang}} To be in a high state of [[anxiety]] or [[fright]]: "Bricking it"
 
+====Antonyms====
+* (''technology, [[slang]]: revert a device to the operational state''): [[unbrick]]
+
 ====Derived terms====
 * [[bricker]]
 * [[brick in]]
