--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -50,7 +50,7 @@
 {{ja-pos|k|adverb|hira=むかし|rom=mukashi}}
 
 # [[once]]
-#* 昔[[見る|見た]][[映画]] a movie I once saw
+#: 昔[[見る|見た]][[映画]] — a movie I once saw
 
 ===References===
 * {{R:Utsubo Monogatari 1}}
