t+la:[[loqui]] ([[WT:EDIT|Assisted]]) <speak#9747189>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -105,7 +105,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Italian: {{t+|it|parlare}}
 * Japanese: {{t+|ja|話す|tr=hanasu}}, {{t-|ja|語る|tr=kataru}}, {{t+|ja|言う|tr=iu}},  {{t+|ja|しゃべる|tr=shaberu}}
 * Korean: {{t+|ko|말하다|tr=malhada|sc=Hang}}
-* Latin: {{t-|la|dicere}},  {{t-|la|fabulari}}
+* Latin: {{t-|la|dicere}},  {{t-|la|fabulari}}, {{t|la|loqui}}
 * Lithuanian: {{t+|lt|kalbėti|xs=Lithuanian}}
 * [[Macedonian]]: {{t|mk|зборува|tr=zboruva}}
 * [[Nahuatl]]: [[tlatoa]]
