--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -247,6 +247,7 @@
 * Turkish: {{t+|tr|tereyağı}}
 * Ukrainian: {{t-|uk|масло|n|tr=máslo|xs=Ukrainian}}
 * Vietnamese: {{t+|vi|bơ|xs=Vietnamese}}
+* [[West Frisian]]: {{t|fy|bûter|c}}
 {{trans-bottom}}
 
 {{trans-top|in chemistry}}
