iwiki +[[:mg:chose]] <chose#9819612>

--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -66,6 +66,7 @@ Compare Italian {{term|cosa|lang=it}}, Portuguese {{term|coisa|lang=pt}}, Spanis
 [[ku:chose]]
 [[lt:chose]]
 [[hu:chose]]
+[[mg:chose]]
 [[ja:chose]]
 [[no:chose]]
 [[pl:chose]]
