--- a/en/慕/慕.15721.wikitext
+++ b/en/慕/慕.15721.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Etymology===
-{{Han compound|莫|心|c1=p|c2=s|t2=heart|ls=psc}}
+{{Han compound|莫|心|alt2=㣺|c1=p|c2=s|t2=heart|ls=psc}}
 
 ===Han character===
 {{Han char|rn=61|rad=心|as=11|sn=15|four=4433<sub>3</sub>|canj=廿日大心 (TAKP)}}
