--- a/en/坏/坏.13010.wikitext
+++ b/en/坏/坏.13010.wikitext
@@ -1,6 +1,6 @@
 {{also|壞}}
 ==Translingual==
-{{Han stroke|[[Image:坏-bw.png|thumbnail|center|600 px]]}}
+{{stroke order|strokes=7}}
 
 ===Etymology===
 {{Han simp|壞|f=褱|t=不}}
