--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -1,6 +1,7 @@
 {{also|xiang}}
 ==Translingual==
-{{Han stroke|[[Image:想-order.gif]]}}
+{{stroke order|strokes=13}}
+{{stroke order|type=animate}}
 
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=4633<sub>0</sub>|canj=木山心 (DUP)|ids=⿱[[相]][[心]]}}
