/* Translingual */ Opinions about 旦4 by Uehara Suguru <旦#9868577>

--- a/en/旦/旦.16910.wikitext
+++ b/en/旦/旦.16910.wikitext
@@ -14,6 +14,9 @@ Pictographic representation of the sun ([[日]]) appearing over the horizon.
 
 ====References====
 * {{Han ref|kx=0489.030|dkj=13734|dj=0850.010|hdz=21483.010|uh=65E6|ud=26086|bh=A5B9|bd=42425}}
+Opinions about "旦4" by Uehara Suguru
+*[http://blog.goo.ne.jp/kuronyan510/e/5d3e7fc9b3060705fd5b4f99a35151bd 3年B組金八先生 女形競艶] - The opinion of the onnagata by Uehara Suguru
+*[http://blog.goo.ne.jp/wadajjj/e/ca4ecf79c306285415bcb07bc5f14f53 「あんたなんか、大っ嫌い！」国生さゆりの“むき出しの敵意”を受け流した新田恵理。]
 
 ----
 
