+{{rfc-header|Derived characters|lang=mul}} <垚#9880511>

--- a/en/垚/垚.13086.wikitext
+++ b/en/垚/垚.13086.wikitext
@@ -6,6 +6,7 @@
 # [[mound]], roundish [[mass]]
 
 ====Derived characters====
+{{rfc-header|Derived characters|lang=mul}}
 * [[堯]]
 
 ====References====
