t+es:[[reproducir]] ([[WT:EDIT|Assisted]]) <play#9908218>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -409,6 +409,7 @@
 * Polish: [[grać]], [[odtwarzać]]
 * Portuguese: {{t+|pt|gravar}}
 * Slovene: [[predvajati]]
+* Spanish: {{t|es|reproducir}}
 * Swahili: {{t+|sw|tamthilia|xs=Swahili}}
 * Swedish: {{t+|sv|spela}}, {{t+|sv|spela upp}}
 {{trans-bottom}}
