t+it:[[olivo]] t+bg:[[маслина]] t-balance ([[WT:EDIT|Assisted]]) <olive#9909591>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -78,14 +78,16 @@
 {{trans-bottom}}
 
 {{trans-top|wood}}
+* Bulgarian: {{t|bg|маслина|tr=maslina|sc=Cyrl}}
 * Dutch: [[olijfhout]] {{n}}, [[olijvenhout]] {{n}}
 * Finnish: {{t+|fi|oliivipuu}}
 * Greek: {{t+|el|ελιά|f|tr=eliá}}
+* Italian: {{t|it|olivo}}
 * Kurdish: [[darzeytûn]] {{f}}, [[zeytûn]] {{f}}
 * [[Macedonian]]: {{t|mk|маслиновина|f|tr=maslinóvina}}
 * Maltese: {{t-|mt|żebbuġ|xs=Maltese}}
-* Russian: {{t+|ru|олива|f|tr=olíva}}
 {{trans-mid}}
+* Russian: {{t+|ru|олива|f|tr=olíva}}
 * Serbian:
 *: Cyrillic: {{t-|sr|маслиновинa|f|sc=Cyrl}}
 *: Roman: [[maslinovina#Serbian|maslinovina]] {{f}}
