t+de:[[Blondine]] t+de:[[Blond]] ([[WT:EDIT|Assisted]]) <blonde#9951314>

--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -27,6 +27,7 @@ In the English language, it is one of only a few distinct words where the gender
 * Esperanto: {{t-|eo|blondulo|xs=Esperanto}}; {{t-|eo|blondulino|xs=Esperanto}} (female)
 * French: {{t+|fr|blonde|f}}
 {{trans-mid}}
+* German: {{t|de|Blondine|f}}
 * Polish: {{t+|pl|blondyn|m}}, {{t+|pl|blondynka|f}}
 * Turkish: {{t|tr|sarışın}}
 {{trans-bottom}}
@@ -34,6 +35,7 @@ In the English language, it is one of only a few distinct words where the gender
 {{trans-top|a hair color}}
 * Bulgarian: {{t|bg|руса коса}}
 {{trans-mid}}
+* German: {{t|de|Blond|n}}
 * Polish: {{t+|pl|blond|m}}
 {{trans-bottom}}
 
