iwiki +[[:my:spelt]] <spelt#9986541>

--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -118,6 +118,7 @@ From {{etyl|gml|da}} {{term|spelte|lang=gml}}.
 [[fr:spelt]]
 [[io:spelt]]
 [[it:spelt]]
+[[my:spelt]]
 [[nl:spelt]]
 [[pl:spelt]]
 [[simple:spelt]]
