t+bn:[[মাখন]] ([[WT:EDIT|Assisted]]) <butter#9987576>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -186,6 +186,7 @@
 * Armenian: {{t-|hy|կարագ|tr=karag}}
 * [[Azeri]]: {{t+|az|yağ|xs=Azeri}}
 * [[Bavarian]]: [[Budda]] {{m}}
+* Bengali: {{t|bn|মাখন|tr=makhôn|sc=Beng}}
 * [[Breton]]: [[amanenn]] {{m}}
 * Bulgarian: {{t-|bg|масло|n|tr=máslo}}
 * [[Catalan]]: [[mantega]] {{f}}
