t+bn:[[ধাক্কা]] ([[WT:EDIT|Assisted]]) <push#10064793>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -163,6 +163,7 @@
 
 ====Translations====
 {{trans-top|short, directed application of force; act of pushing}}
+* Bengali: {{t|bn|ধাক্কা|tr=dhakka|sc=Beng}}
 * Dutch: {{t+|nl|duw|m}}
 * German: [[Schubs]] {{m}}, [[Stoß]] {{m}}
 * Kurdish: {{ku-Arab|[[پاڵ]]}}
