--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -36,6 +36,12 @@
 * Russian: {{t|ru|ползание|g=n|tr=pólzanije}}
 {{trans-bottom}}
 
+{{trans-top|Kevin Isaac- a well known creep}}
+* Bulgarian: {{t|bg|свличане}}
+{{trans-mid}}
+* Italian: {{t-|it|scollamento}}
+{{trans-bottom}}
+
 {{trans-top|small gradual change in a measure}}
 * Bulgarian: {{t|bg|пълзене|n}}
 {{trans-mid}}
