/* English */ -rft, unk. <spelt#10225594>

--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -1,9 +1,8 @@
 ==English==
-{{tearoom}}
 
 ===Pronunciation===
 * {{IPA|/ˈspɛlt/}}, {{SAMPA|/"spElt/}}
-*: {{rhymes|ɛlt}}
+* {{rhymes|ɛlt}}
 
 ===Etymology 1===
 See {{term|spell#Etymology_2|spell}}
@@ -21,7 +20,7 @@ See {{term|spell#Etymology_2|spell}}
 *: Yes, yes; he teaches boys the hornbook. What is a, b, '''spelt''' / backward with the horn on his head?
 
 ===Etymology 2===
-Unknown, but possibly {{etyl|ang}} {{term|spelt|lang=ang}}, and {{etyl|LL.}} {{term|spelda|lang=la}}.
+{{unk.}}, but possibly {{etyl|ang}} {{term|spelt|lang=ang}}, and {{etyl|LL.}} {{term|spelda|lang=la}}.
 
 ====Noun====
 {{en-noun|-}}
