--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -37,6 +37,12 @@
 
 # {{defn|Mandarin|sort=日05}}
 
+----
+
+==Vietnamese==
+===Han character===
+'''昜''' ([[dương]])
+
 [[fr:昜]]
 [[ja:昜]]
 [[zh:昜]]
