--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -13,6 +13,9 @@ In current form, {{Han compound|〡|t1=one|日|t2=day}}, representing the day be
 # [[old]], [[ancient]]
 # [[former]], [[past]]
 
+====Derived characters====
+* [[児]]
+
 ====References====
 * {{Han ref|kx=0489.051|dkj=13737|dj=0850.040|hdz=21483.020|uh=65E7|ud=26087}}
 
