t+fr:[[fatigue]] t-balance ([[WT:EDIT|Assisted]]) <creep#10262400>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -55,6 +55,7 @@
 
 {{trans-top|gradual deformation of material under stress}}
 * Finnish: {{t-|fi|viruminen}}
+* French: {{t|fr|fatigue|f}}
 {{trans-mid}}
 {{trans-bottom}}
 
