iwiki +[[:my:branch]] <branch#10318358>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -236,6 +236,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 [[li:branch]]
 [[hu:branch]]
 [[ml:branch]]
+[[my:branch]]
 [[nl:branch]]
 [[pl:branch]]
 [[pt:branch]]
