t+bn:[[চোষা]] ([[WT:EDIT|Assisted]]) <suck#10380448>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -44,6 +44,7 @@
 {{trans-top|to use the mouth to pull in (usually liquid) substances.}}
 * Arabic: {{t+|ar|مص}}
 * Armenian: {{t-|hy|ծծել|tr=ççel}}
+* Bengali: {{t|bn|চোষা|tr=cosha|sc=Beng}}
 * Bulgarian: {{t+|bg|смуча|tr=smuča}}
 * [[Catalan]]: [[xuclar]]
 * Czech: {{t-|cs|sát}}
