--- a/en/坚/坚.13021.wikitext
+++ b/en/坚/坚.13021.wikitext
@@ -1,6 +1,8 @@
 {{also|堅}}
 ==Translingual==
 {{zh-forms|坚|[[堅]]}}
+===Etymology===
+{{Han simp|堅|f=臤}}.
 
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=中水土 (LEG)}}
