t+lt:[[kreivė]] ([[WT:EDIT|Assisted]]) <curve#10409589>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -102,6 +102,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Indonesian: {{t-|id|kurva|xs=Indonesian}}
 * Italian: {{t+|it|curva|f}}
 * Japanese: {{t-|ja|曲線|tr=きょくせん, kyokusen}}
+* Lithuanian: {{t|lt|kreivė|f}}
 * Polish: {{t+|pl|krzywa|f}}
 * Russian: {{t|ru|кривая|f|tr=krivája}}
 * [[Scottish Gaelic]]: {{t-|gd|bogha|f|xs=Scottish Gaelic}},  {{t-|gd|lùb|f|xs=Scottish Gaelic}}
