t+lv:[[ līkums]] ([[WT:EDIT|Assisted]]) <curve#10409606>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -74,6 +74,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Hebrew: {{t|he|עקימה|f|tr='aqima}}
 * Italian: {{t+|it|curva|f}}
 * Japanese: {{t-|ja|曲線|tr=きょくせん, kyokusen}}
+* Latvian: {{t|lv| līkums|m}}
 * Lithuanian: {{t|lt|linkis|m}}, {{t|lt|vingis|m}}
 * Polish: {{t|pl|zakręt|m}}
 * Russian: {{t+|ru|изгиб|m|tr=izgíb}}, {{t+|ru|кривая|f|tr=krivája}}, {{t+|ru|поворот|m|tr=povorót}}
