t+lt:[[kova]] t+lt:[[muštynės]] t+lt:[[grumtynės]] ([[WT:EDIT|Assisted]]) <fight#10421642>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -262,6 +262,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 * Kurdish:
 *: Sorani: {{t|ku|شه‌ڕ|tr=shaR|sc=ku-Arab}}
 * Latin: {{t+|la|pugna}}
+* Lithuanian: {{t|lt|kova|f}}, {{t|lt|muštynės|p}}, {{t|lt|grumtynės|p}}
 * Norwegian: {{t|no|slåsskamp}}
 * Portuguese: {{t+|pt|luta|f}}
 * Romanian: {{t-|ro|luptă|f}},  {{t-|ro|bătaie}}
