t+lv:[[cīnīties]] ([[WT:EDIT|Assisted]]) <fight#10421796>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -75,7 +75,7 @@ From {{etyl|ang}} ''[[feohtan]]'', from {{proto|Germanic|fehtanan|lang=en}}. Cog
 *: Sorani: {{t|ku|شه‌ڕ کردن|tr=shaR kirdin|sc=ku-Arab}}
 * [[Lao]]: {{t-|lo|ຕໍ່ສູ້|tr=töö-suu|sc=Laoo|xs=Lao}}, {{t-|lo|ຮົບ|tr=hop|sc=Laoo|xs=Lao}}
 * Latin: {{t-|la|pugno}}, {{t-|la|luctor}}
-* {{trreq|Latvian}}
+* Latvian: {{t|lv|cīnīties}}
 * Lithuanian: {{t|lt|kautis|xs=Lithuanian}}, {{t|lt|muštis}}, {{t|lt|peštis}}, {{t|lt|grumtis}}
 * {{trreq|Maltese}}
 * Norwegian: {{t+|no|slåss}}, {{t-|no|kjempe}}
