t+lv:[[kauja]] t+lv:[[cīņa]] ([[WT:EDIT|Assisted]]) <fight#10422093>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -292,6 +292,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 * Kurdish:
 *: Sorani: {{t|ku|شه‌ڕ|tr=shaR|sc=ku-Arab}}
 * Latin: {{t+|la|pugna}}
+* Latvian: {{t|lv|kauja|f}}, {{t|lv|cīņa|f}}
 * Lithuanian: {{t|lt|kova|f}}, {{t|lt|mūšis|m}}
 * Norwegian: {{t-|no|slag}}
 * Polish: {{t|pl|bój}}
