t+ca:[[triar]] ([[WT:EDIT|Assisted]]) <choose#10426221>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -87,7 +87,7 @@
 * Armenian: [[ընտրել]] (əntrel)
 * Bosnian: {{t-|bs|izabrati}}, {{t-|bs|odabrati}}
 * Bulgarian: {{t|bg|подбирам}},  {{t|bg|предпочитам}}
-* [[Catalan]]: [[elegir]]
+* [[Catalan]]: [[elegir]], {{t|ca|triar}}
 * Chinese:
 *: Gan: {{tø|gan|簡|sc=Hani}}, {{tø|gan|简|tr=gan3|sc=Hani}}
 *: Mandarin: {{t-|cmn|選擇|sc=Hani}},  {{t-|cmn|选择|tr=xuǎnzé|sc=Hani}},  {{t|cmn|挑選|sc=Hani}},  {{t|cmn|挑选|tr=tiāoxuǎn|sc=Hani}}
