t+ro:[[ramifica]] ([[WT:EDIT|Assisted]]) <branch#10457781>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -181,6 +181,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * German: [[abzweigen]]
 * Hungarian: {{t+|hu|hajt}},  {{t|hu|sarjad}},  {{t|hu|sarjadzik}}
 * Polish: {{t|pl|rozgałęziać się}}
+* Romanian: {{t|ro|ramifica}}
 * Swahili: {{t+|sw|tanzu|xs=Swahili}}
 {{trans-bottom}}
 
