t+ro:[[sări]] ([[WT:EDIT|Assisted]]) <branch#10458172>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -202,7 +202,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 {{trans-mid}}
 * German: {{t+|de|springen}}
 * Polish: {{t|pl|rozgałęziać się}}
-* Romanian: {{t|ro|ramifica}}
+* Romanian: {{t|ro|ramifica}}, {{t|ro|sări}}
 {{trans-bottom}}
 
 {{trans-top|to branch off}}
