iwiki +[[:ku:count]] <count#10474602>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -233,6 +233,7 @@ From {{etyl|fro}} {{term|comte|lang=fro}}, {{term|conte|lang=fro}}.
 [[it:count]]
 [[kn:count]]
 [[kk:count]]
+[[ku:count]]
 [[li:count]]
 [[hu:count]]
 [[ml:count]]
