--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -1,3 +1,4 @@
+{{also|昜}}
 ==Translingual==
 
 ===Han character===
@@ -5,6 +6,9 @@
 
 # [[change]]
 # [[easy]]
+
+====See also====
+* [[昜]]
 
 ====References====
 * {{Han ref|kx=0492.030|dkj=13814|dj=0854.080|hdz=21494.010|uh=6613|ud=26131|bh=A9F6|bd=43510}}
