/* Han character */ derived: 章 <早#10508529>

--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -12,6 +12,9 @@ One possibility is that 早 is a pictograph of [[sun]] (日) over the [[horizon]
 # soon
 # morning
 
+====Derived characters====
+* [[章]]
+
 ====References====
 * {{Han ref|kx=0489.120|dkj=13742|dj=0850.090|hdz=21483.060|uh=65E9|ud=26089|bh=A6AD|bd=42669}}
 
