t+tr:[[bulmak]] ([[WT:EDIT|Assisted]]) <find#10521466>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -76,6 +76,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþanan|to s
 * Slovene: {{t+|sl|najti}}
 * Spanish: {{t+|es|encontrar}}, {{t+|es|hallar}}
 * Swedish: {{t+|sv|finna}}, {{t+|sv|hitta}}, {{t|sv|uppdaga}}, {{t+|sv|upptäcka}}, {{t|sv|utröna}}
+* Turkish: {{t|tr|bulmak}}
 {{trans-bottom}}
 
 {{trans-top|point out}}
