--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -30,6 +30,7 @@ From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coûter]]'').
 * [[Chamicuro]]: {{tø|ccc|iso'no}}
 * Chinese: {{zh-tsp|費用|费用|fèiyòng}}, {{t-|cmn|成本|tr=chéngběn|sc=Hani}}, {{zh-tsp|花費|花费|huāfèi}}
 * Czech: {{t-|cs|náklad|m}}, {{t+|cs|cena|f}}
+* Dutch: {{t+|nl|Kosten}}
 * Finnish: {{t+|fi|hinta}}, {{t+|fi|kustannus}}
 * German: {{t+|de|Kosten|f|p}}
 * Greek: {{t+|el|κόστος|n|tr=kóstos}}, {{t+|el|δαπάνη|f|tr=dapáni}}, {{t+|el|τίμημα|n|tr=tímima}}, {{t+|el|αντίτιμο|n|tr=antítimo}}
