/* Noun */ merge senses as examples of main sense <find#10579878>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -135,15 +135,14 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþanan|to s
 ===Noun===
 {{en-noun}}
 
-# Anything that is found, especially by [[good fortune]], particularly objects on archeological sites.
-# A person with talent.
+# Anything that is found, as objects on an archeological site or a person with talent.
 # The act of finding.
 
 ====Synonyms====
-* (''anything found, especially by good fortune''): [[discovery]]
+* {{sense|anything found}} [[discovery]]
 
 ====Translations====
-{{trans-top|anything that is found, especially by good fortune}}
+{{trans-top|anything found}}
 * Danish: {{t-|da|fund|c}}
 * Dutch: {{t+|nl|vondst|f}}
 * Esperanto: [[trovaĵo]], [[trovitaĵo]]
