/* Translations */ <et cetera#10602045>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -30,7 +30,7 @@ From {{etyl|la|en}} {{term|et cetera|et cētera|lang=la|and the rest" or "and so
 
 ====Translations====
 {{trans-top|and so on}}
-* Bengali: {{t|bn|ইত্যাদি|tr=ittodi|sc=Beng}}
+* Bengali: {{t|bn|ইত্যাদি|tr=ittêdi|sc=Beng}}
 * Bulgarian: [[и така нататък]], [[и т.н.]]
 * Chinese:
 *: Mandarin: {{t-|cmn|等|tr=děng|sc=Hani}}, {{t-|cmn|等等|tr=děngděng|sc=Hani}}
