t+yi:[[אייראָפּעיש]] t-balance ([[WT:EDIT|Assisted]]) <European#10637147>

--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -38,8 +38,8 @@
 * German: {{t+|de|europäisch}}
 * Greek: {{t+|el|ευρωπαϊκός|tr=evropa'ikós}}
 * Hungarian: {{t+|hu|európai}}
-{{trans-mid}}
 * [[Interlingua]]: [[europee]]
+{{trans-mid}}
 * Irish: {{t|ga|Eorpach}}, {{t|ga|Eorpa|alt=na hEorpa}}
 * Italian: {{t+|it|europeo|m}}, {{t+|it|europea|f}}
 * Japanese: [[ヨーロッパ]]の (Yōroppa no), [[欧州]]の (Ōshū no)
@@ -55,6 +55,7 @@
 * Ukrainian: {{t|uk|європейський|tr=jevropéjs'kyj|xs=Ukrainian}}
 * Welsh: [[Ewropeaidd]]
 * [[West Frisian]]: [[Europeesk]]
+* Yiddish: {{t|yi|אייראָפּעיש|tr=eyropeyish|sc=yi-Hebr}}
 {{trans-bottom}}
 
 ===Noun===
