--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -363,13 +363,17 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 
 ==Romansch==
 
+===Alternative forms===
+* {{i|Sutsilvan}} {{l|rm|plùn}}, {{l|rm|plùm}}
+* {{i|Surmiran|Puter|Vallader}} {{l|rm|plom}}
+
 ===Etymology===
 From {{etyl|la|rm}} {{term|plumbum||lead|lang=la}}.
 
 ===Noun===
-{{infl|rm|noun}} {{g|Romansch}}
+{{infl|rm|noun|g=m}}
 
-# [[lead]] {{i|metal}}
+# {{context|Rumantsch Grischun|Sursilvan|lang=rm}} [[lead]] {{i|metal}}
 
 [[de:plum]]
 [[el:plum]]
