t+ro:[[alac]] ([[WT:EDIT|Assisted]]) <spelt#10660297>

--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -57,6 +57,7 @@ See {{term|spell#Etymology_2|spell}}
 * Norwegian: {{t-|no|spelt}}
 * Polish: {{t|pl|pszenica orkisz|f}}
 * Portuguese: {{t|pt|espelta|f}}
+* Romanian: {{t|ro|alac|n}}
 * Russian: {{t|ru|полба|f|tr=pólba}}
 * Serbian: {{t|sr|прапшеница|f|tr=prapšenica|sc=Cyrl}}
 * Slovene: {{t-|sl|pira|f}}
