t+fi:[[iskeä]] t-balance t+fi:[[vetää]] t+fi:[[tehdä]] t+fi:[[antaa]] t+fi:[[saada]] ([[WT:EDIT|Assisted]]) <pull#10663179>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -113,19 +113,23 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 {{trans-bottom}}
 
 {{trans-top|slang: persuade (a person) to have sex with one}}
+* Finnish: {{t|fi|iskeä}}
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|remove (something) from circulation}}
-* French: {{t+|fr|retirer}}
+* Finnish: {{t|fi|vetää}}
 {{trans-mid}}
+* French: {{t+|fr|retirer}}
 {{trans-bottom}}
 
 {{trans-top|do, perform}}
+* Finnish: {{t|fi|tehdä}}
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|retrieve or generate for use}}
+* Finnish: {{t|fi|antaa}}
 {{trans-mid}}
 {{trans-bottom}}
 
@@ -144,8 +148,9 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 {{trans-bottom}}
 
 {{trans-top|succeed in finding a person with whom to have sex}}
-* French: {{t|fr|tirer un coup}}
+* Finnish: {{t|fi|saada}}
 {{trans-mid}}
+* French: {{t|fr|tirer un coup}}
 {{trans-bottom}}
 
 ===Noun===
