iwiki +[[:my:stab]] <stab#10702325>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -187,6 +187,7 @@ From {{etyl|de|sv}} {{term|Stab|lang=de}}.<ref>{{cite web |last=Hellquist |first
 [[li:stab]]
 [[hu:stab]]
 [[ml:stab]]
+[[my:stab]]
 [[pl:stab]]
 [[pt:stab]]
 [[ru:stab]]
