t+th:[[สวย]] t+th:[[งาม]] ([[WT:EDIT|Assisted]]) <beautiful#10796712>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -116,7 +116,7 @@
 * [[Tajik]]: {{t|tg|зебо|tr=zebo|sc=Cyrl|xs=Tajik}}
 * [[Tamil]]: [[அழகிய]] (azhagiya)
 * [[Telugu]]: [[అందమైన]]
-* Thai: {{t-|th|สุนทร|tr=sŭnton}}
+* Thai: {{t-|th|สุนทร|tr=sŭnton}}, {{t|th|สวย|tr=sŭay|sc=Thai}}, {{t|th|งาม|tr=ngaam|sc=Thai}}
 * [[Tswana]]: {{t-|tn|-ntle|xs=Tswana}}
 * Turkish: {{t+|tr|güzel}}
 * Ukrainian: {{t|uk|вродливий|tr=vrodlývyj|xs=Ukrainian}},  {{t|uk|красивий|tr=krasývyj|xs=Ukrainian}}
