iwiki +[[:ku:curtain]] <curtain#10808548>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -130,6 +130,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 [[it:curtain]]
 [[kn:curtain]]
 [[kk:curtain]]
+[[ku:curtain]]
 [[lo:curtain]]
 [[hu:curtain]]
 [[ml:curtain]]
