/* Translations */ <United States of America#10811861>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -40,7 +40,7 @@
 * Finnish: {{t+|fi|Amerikan yhdysvallat}}, ''short:'' {{t+|fi|Yhdysvallat}}, {{t+|fi|USA}}
 * French: {{t+|fr|États-Unis d'Amérique|m|p}}, (''short form'') {{t+|fr|États-Unis|m|p}}, {{t|fr|É-U}}
 * Georgian: {{t-|ka|ამერიკის შეერთებული შტატები|tr=amerikis šeert'ebuli štatebi|sc=Geor|xs=Georgian}}
-* German: {{t+|de|Vereinigte Staaten von Amerika||m|p}}, (''short form'') {{t+|de|Vereinigte Staaten|m|p}}, {{t+|de|USA|m|p}} or {{f|s}}
+* German: {{t+|de|Vereinigte Staaten von Amerika|m|p}}, {{qualifier|short form}} {{t+|de|Vereinigten Staaten|m|p}}, {{t+|de|USA|m|p}} or {{f|s}}
 * Greek: {{t+|el|Ηνωμένες Πολιτείες της Αμερικής|f|p|tr=Inoménes Politeíes tis Amerikís}} (official), ''short forms:'' {{t-|el|Ηνωμένες Πολιτείες Αμερικής|f|p|tr=Inoménes Politeíes Amerikís}}, {{t+|el|Ηνωμένες Πολιτείες|f|p|tr=Inoménes Politeíes}}, {{t+|el|ΗΠΑ|f|p|tr=IPA}} (USA)
 * [[Gujarati]]: [[સંયુકત રાજ્ય અમેરિકા]]
 * Hawaiian: {{tø|haw|'Amelika Huipū'ia}}
