iwiki +[[:ku:secretary]] <secretary#10813634>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -164,6 +164,7 @@ From {{etyl|ML.}} {{term|lang=la|secretarius||one entrusted with secrets}} < {{e
 [[it:secretary]]
 [[kn:secretary]]
 [[sw:secretary]]
+[[ku:secretary]]
 [[lo:secretary]]
 [[lt:secretary]]
 [[hu:secretary]]
