/* Etymology 1 */ it's a clipping, not an abbreviation, and it's also an adjective <het#10815019>

--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -2,10 +2,15 @@
 ==English==
 
 ===Etymology 1===
-{{abbreviation}}
+{{clipping|heterosexual}}.
 
 ====Noun====
 {{en-noun}}
+
+# {{slang}} [[heterosexual|Heterosexual]].
+
+====Adjective====
+{{en-adj}}
 
 # {{slang}} [[heterosexual|Heterosexual]].
 
