/* Noun */ New meaning added <European#10817596>

--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -20,6 +20,7 @@
 * [[European Parliament]]
 * [[European Union]]
 
+
 ====Translations====
 {{trans-top|related to Europe or the European Union}}
 * Arabic: {{t-|ar|أوروبي|tr='uruubiy}}
@@ -56,6 +57,18 @@
 * Welsh: [[Ewropeaidd]]
 * [[West Frisian]]: [[Europeesk]]
 * Yiddish: {{t|yi|אייראָפּעיש|tr=eyropeyish|sc=yi-Hebr}}
+{{trans-bottom}}
+
+===Noun===
+{{en-noun}}
+# A [[citizen]] of one of the countries in Europe (that is a member of the European Union).
+
+====Translations====
+{{trans-top|citizen of one of the countries in Europe (that is a member of the European Union)}}
+* German: {{t+|de|Europäer}} {{m}}, {{t+|de|Europäerin}} {{f}}
+* Norwegian: {{t+|no|europeer}} {{m}}
+{{trans-mid}}
+* Turkish: {{t|tr|Avrupalı}}
 {{trans-bottom}}
 
 ===Noun===
