iwiki +[[:mg:come]] <come#10828038>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -333,6 +333,7 @@ Latin [[comede]] (imperative), [[comedit]] (present).
 [[lt:come]]
 [[li:come]]
 [[hu:come]]
+[[mg:come]]
 [[ml:come]]
 [[my:come]]
 [[nl:come]]
