--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -21,8 +21,8 @@ However, some older forms of the character have a more complex form, and show a 
 ===Usage notes===
 <references/>
 
+* Often commonly used as a generic or stereotypical Chinese male name, like {{term|John|lang=en}}.
 
-# Often commonly used as a generic or stereotypical Chinese male name, like {{term|John|lang=en}}.
 
 [[zh:明]]
 
