t+gd:[[cùirtear]] ([[WT:EDIT|Assisted]]) <curtain#10893833>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -51,6 +51,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Portuguese: {{t+|pt|cortina|f}}
 * Romanian: {{t-|ro|perdea|f}}
 * Russian: {{t+|ru|штора|f|tr=štóra}}, {{t+|ru|занавеска|f|tr=zanav'éska}}
+* [[Scottish Gaelic]]: {{t|gd|cùirtear|m}}
 * Serbo-Croatian:
 *: Cyrillic: (''Ekavian'') {{tø|sh|завеса|f|alt=за̑веса|sc=Cyrl|xs=Serbo-Croatian}}, (''Ijekavian'') {{tø|sh|завјеса|f|alt=за̑вјеса|sc=Cyrl|xs=Serbo-Croatian}}; {{tø|sh|застор|m|alt=за́стор|sc=Cyrl|xs=Serbo-Croatian}}
 *: Roman: (''Ekavian'') {{tø|sh|zavesa|f|alt=zȃvesa|xs=Serbo-Croatian}}, (''Ijekavian'') {{tø|sh|zavjesa|f|alt=zȃvjesa|xs=Serbo-Croatian}}; {{tø|sh|zastor|m|alt=zástor|xs=Serbo-Croatian}}
@@ -79,6 +80,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 {{trans-mid}}
 * Romanian: {{t|ro|cortină|f}}
 * Russian: {{t+|ru|занавес|m|tr=zánav'es}}
+* [[Scottish Gaelic]]: {{t|gd|cùirtear|m}}
 * Serbo-Croatian:
 *: Cyrillic: (''Ekavian'') {{tø|sh|завеса|f|alt=за̑веса|sc=Cyrl|xs=Serbo-Croatian}}, (''Ijekavian'') {{tø|sh|завјеса|f|alt=за̑вјеса|sc=Cyrl|xs=Serbo-Croatian}} ; {{tø|sh|застор|m|alt=за́стор|sc=Cyrl|xs=Serbo-Croatian}}
 *: Roman: (''Ekavian'') {{tø|sh|zavesa|f|alt=zȃvesa|xs=Serbo-Croatian}}, (''Ijekavian'') {{tø|sh|zavjesa|f|alt=zȃvjesa|xs=Serbo-Croatian}} ; {{tø|sh|zastor|m|alt=zástor|xs=Serbo-Croatian}}
