--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -25,6 +25,7 @@
 # {{context|informal|pejorative}} A frightening and/or disconcerting person, especially one who gives the speaker [[chills]] or who induces [[psychosomatic]] facial itching.
 #: ''Stop following me, you '''creep'''!''
 # {{context|agriculture}} A barrier with small openings used to keep large animals out while allowing smaller animals to pass through.
+# (People) Jeff Smith
 
 ====Derived terms====
 {{der-top|gradual expansion or proliferation, negatively}}
