--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -188,6 +188,7 @@ From {{etyl|fro}} {{term|porter|lang=fr}} < {{etyl|la}} {{term|portare||carry|la
 #: '''''Port''' arms!''
 #: ''...the angelic squadron...began to hem him round with '''ported''' spears.'' — [[w:John Milton|Milton]], ''[[w:Paradise Lost|Paradise Lost]]'' (1667), [[s:Paradise Lost/Book IV|book IV]]
 # {{computing|video games}} To adapt, modify, or create a new version of, a program so that it works on a different platform; to adapt a console [[video game]] title to be sold and played on another brand of console. {{pedialite|Porting|Porting (computing)}}
+# {{telephony}} To carry or transfer an existing telephone number from one telephone service provider to another.[[User:Ferrarama|Ferrarama]] 21:06, 8 November 2010 (UTC)
 
 =====Derived terms=====
 * [[porter]]
