--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -26,7 +26,7 @@ From {{etyl|sh|en}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land
 * Chinese:
 *: Mandarin: {{t-|cmn|南斯拉夫|tr=Nánsīlāfū|sc=Hani}}
 * Croatian: {{t-|hr|Jugoslavija|f|alt=Jugòslāvija}}
-* Czech: [[Jugoslávie#Czech|Jugoslávie]] {{f}}, {{t|cs|Jugoslávie|f}}
+* Czech: {{t|cs|Jugoslávie|f}}
 * Danish: {{t-|da|Jugoslavien}}
 * Dutch: {{t-|nl|Joegoslavië}}
 * Esperanto: [[Jugoslavio]]
